@@ -1,13 +1,0 @@
-(
- TYPE:BOOL
- TYPE:INT
- TYPE:SYM-EMPTY-LIST
- TYPE:SYM-DIV-BY-ZERO
- ( TYPE:LIST @1 )
- ( TYPE:PAIR @1 @2 )
- ( TYPE:ANY @1 @2 )
- ( TYPE:FUNC1 @1 @2 )
- ( TYPE:FUNC2 @1 @2 @3 )
- ( TYPE:FUNC3 @1 @2 @3 @4 )
-)
-
