@@ -24,114 +24,141 @@
 
 #include <iostream>
 #include <fstream>
+#include <cstdlib>
+#include <ctime>
+#include <set>
 #include <vm/environment.h>
 #include <vm/object.h>
 #include <vm/ioobject.h>
 #include <vm/logger.h>
 
-std::pair<VM::Object, size_t> get_unbindes(const VM::Object& obj)
+struct TypeSystem
 {
-	std::pair<VM::Object, size_t> res = std::make_pair(obj, 0);
-	if(! obj.IsNIL())
+	TypeSystem(VM::Environment& env)
+		:type_int(env.DefineSymbol("TYPE:INT"))
+		,type_bool(env.DefineSymbol("TYPE:BOOL"))
+		,value_true(env.DefineSymbol("TRUE"))
+		,value_false(env.DefineSymbol("FALSE"))
 	{
-		// if type is MACRO, then it self undinded
-		if(obj.GetType() == VM::MACRO)
-		{
-			res.second = 1;
-		}
-		// if type is LIST then it possible unbinded type
-		else if(obj.GetType() == VM::LIST)
-		{
-			size_t unbinded_parameters = 0;
+		symbols.insert(env.DefineSymbol("TYPE:SYM-DIV-BY-ZERO"));
+		symbols.insert(env.DefineSymbol("TYPE:EMPTY-LIST"));
+	}
 
-			// search on the all tree for MACRO, check for single use it
-			std::stack<VM::WeakObject> stack;
-			stack.push(obj);
-			size_t num_macros = 0;
-			while(! stack.empty())
+	std::set<VM::Object, VM::WeakObject::Comparator> symbols;
+
+	VM::Object type_int;
+	VM::Object type_bool;
+	VM::Object value_true;
+	VM::Object value_false;
+};
+
+/// @todo Get type for expression
+/// @todo Generate expression for type include functional
+
+VM::Object type_to_expr(const TypeSystem& type_system, const VM::Object& type)
+{
+	VM::Object expr(type.GetEnv(), VM::ERROR);
+	switch(type.GetType())
+	{
+		case VM::SYMBOL:
 			{
-				VM::WeakObject p = stack.top();
-				stack.pop();
-
-				if(! p.IsNIL())
+				// Generate TYPE:INTEGER
+				if(type == type_system.type_int)
 				{
-					if(p.GetType() == VM::MACRO)
-					{
-						if(p.GetValue() == unbinded_parameters)
-						{
-							THROW(FormatString("Duplicate MACRO &", unbinded_parameters, " in ", obj));
-						}
-						else if(p.GetValue() > unbinded_parameters)
-						{
-							unbinded_parameters = p.GetValue();	
-						}
-						++ num_macros;
-					}
-					else if(p.GetType() == VM::LIST)
-					{
-						stack.push(p.GetHead());
-						stack.push(p.GetTail());
-					}
+					signed long value = static_cast<signed long>(rand()) - RAND_MAX / 2;
+					expr = VM::Object(type.GetEnv(), VM::INTEGER, static_cast<VM::Heap::UInt>(value));
+					return expr;
+				}
+
+				// Generate TYPE:BOOL
+				if(type == type_system.type_bool)
+				{
+					return (rand() % 2) ? type_system.value_true : type_system.value_false;
+				}
+				
+				// Generate TYPE:SYM-*
+				std::set<VM::Object>::const_iterator it = type_system.symbols.find(type);
+				if(it != type_system.symbols.end())
+				{
+					return *it;
 				}
 			}
-			if(num_macros != unbinded_parameters)
-			{
-				THROW(FormatString("Wrong MACRO in ", obj));
-			}
-			res.second = num_macros;
-		}
+			break;
+		case VM::ERROR:
+		case VM::INTEGER:
+		case VM::FUNC:
+		case VM::ADF:
+		case VM::PARAM:
+		case VM::QUOTE:
+		case VM::IF:
+		case VM::LIST:
+		case VM::EVAL:
+		case VM::MACRO:
+		default:
+			std::cout << "Wrong or unsupported type " << type.GetType() << std::endl;
 	}
-	return res;
+	return expr;
+}
+
+VM::Object expr_to_type(const TypeSystem& type_system, const VM::Object& expr)
+{
+	VM::Object type(expr.GetEnv(), VM::ERROR);
+	switch(expr.GetType())
+	{
+		case VM::INTEGER:
+			return type_system.type_int;
+			break;
+		case VM::SYMBOL:
+			{
+				// check for TYPE:BOOL
+				if((expr == type_system.value_true) || (expr == type_system.value_false))
+				{
+					return type_system.type_bool;
+				}
+
+				// check for TYPE:SYM-*
+				std::set<VM::Object>::const_iterator it = type_system.symbols.find(expr);
+				if(it != type_system.symbols.end()) // Get typed symbols
+				{
+					return *it;
+				}
+				/// @todo Other symbols.
+			}
+			break;
+		case VM::ERROR:
+		case VM::FUNC:
+		case VM::ADF:
+		case VM::PARAM:
+		case VM::QUOTE:
+		case VM::IF:
+		case VM::LIST:
+		case VM::EVAL:
+		case VM::MACRO:
+		default:
+			std::cout << "Wrong or unsupported type " << expr.GetType() << std::endl;
+	}
+	return type;
 }
 
 int main(int argc, char **argv)
 {
+	srand(time(NULL));
 	{
 		VM::Environment env;
 
-		//Load types from file
-		std::ifstream f(DATA_DIR "static_types.lsp");
-		if(f.fail())
+		TypeSystem type_system(env);
+
+		if((argc >= 2) && (argv[1][0] == 't')) // type to expression
 		{
-			THROW("Cann't open types list.");
+			VM::Object type(env);
+			std::cin >> type;
+			std::cout << type_to_expr(type_system, type) << std::endl;
 		}
-		VM::Object types_list(env);
-		f >> types_list;
-		std::cout << "Types: " << types_list << std::endl;
-
-		std::vector<VM::Object> defined_types;
-		std::vector<std::pair<VM::Object, size_t> > unbinded_types; // Type and number of unbinded parameters, for (TYPE:LIST @1) it is 1.
-
-		VM::Object p(types_list);
-		while((! p.IsNIL()) && (p.GetType() == VM::LIST))
+		else // expression to type
 		{
-			VM::Object t = p.GetHead();
-			std::pair<VM::Object, size_t> unbind = get_unbindes(t);
-			if(unbind.second > 0)
-			{
-				unbinded_types.push_back(unbind);
-			}
-			else
-			{
-				defined_types.push_back(t);
-			}
-
-			p = p.GetTail();
-		}
-
-
-
-		size_t i;
-		std::cout << "Defined types:" << std::endl;
-		for(i = 0; i < defined_types.size(); ++ i)
-		{
-			std::cout << " " << defined_types[i] << std::endl;
-		}
-
-		std::cout << "Unbinded types:" << std::endl;
-		for(i = 0; i < unbinded_types.size(); ++ i)
-		{
-			std::cout << " " << unbinded_types[i].first << " with " << unbinded_types[i].second << " params" << std::endl;
+			VM::Object expr(env);
+			std::cin >> expr;
+			std::cout << expr_to_type(type_system, expr) << std::endl;
 		}
 	}
 	return 0;
